objects/Visualforce_Page__c.object
<CustomObject>
    <description>It will capture all the vf pages present in the system.</description>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>What is changed in the page.</description>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the page</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the page.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The object with which the vf page is associated.</description>
        <label>Related to Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Visualforce Pages</relationshipLabel>
        <relationshipName>Visualforce_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Visualforce Pages</relationshipLabel>
        <relationshipName>Visualforce_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visualforce Page</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visualforce Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visualforce Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>